[package]
name = "cosmic-text-width-constraint-bug"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmic-text = "0.8.0"
# image = { version = "0.24.6", default-features = false, features = ["png"] }
image = { version = "0.24.6", default-features = false, features = ["png"], optional = true }

[features]
render = ["dep:image"]
